logs/dag_id=testing_dag/run_id=manual__2024-06-19T163252.077240+0000/task_id=load_data/attempt=1.log
[2024-06-19T16:33:35.853+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-19T16:33:35.874+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: testing_dag.load_data manual__2024-06-19T16:32:52.077240+00:00 [queued]>
[2024-06-19T16:33:35.883+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: testing_dag.load_data manual__2024-06-19T16:32:52.077240+00:00 [queued]>
[2024-06-19T16:33:35.885+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-06-19T16:33:35.898+0000] {taskinstance.py:2330} INFO - Executing <Task(SQLExecuteQueryOperator): load_data> on 2024-06-19 16:32:52.077240+00:00
[2024-06-19T16:33:35.908+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=2103) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-06-19T16:33:35.910+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'testing_dag', 'load_data', 'manual__2024-06-19T16:32:52.077240+00:00', '--job-id', '76', '--raw', '--subdir', 'DAGS_FOLDER/main_dag.py', '--cfg-path', '/tmp/tmpo8iatxxs']
[2024-06-19T16:33:35.911+0000] {standard_task_runner.py:63} INFO - Started process 2105 to run task
[2024-06-19T16:33:35.912+0000] {standard_task_runner.py:91} INFO - Job 76: Subtask load_data
[2024-06-19T16:33:35.954+0000] {task_command.py:426} INFO - Running <TaskInstance: testing_dag.load_data manual__2024-06-19T16:32:52.077240+00:00 [running]> on host 80ed35ae19d6
[2024-06-19T16:33:36.038+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='***@example.com' AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='testing_dag' AIRFLOW_CTX_TASK_ID='load_data' AIRFLOW_CTX_EXECUTION_DATE='2024-06-19T16:32:52.077240+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-06-19T16:32:52.077240+00:00'
[2024-06-19T16:33:36.040+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-19T16:33:36.041+0000] {sql.py:276} INFO - Executing: BEGIN TRANSACTION;
COPY raw_external_fund(
	"financial_type"
	"symbol"	,
	"security_name"	,
	"sedol"	,
	"price"	,
    "quantity"	,
	"realised_pl"	,
    "market_value"	,
	"fund_name"	,
	"date"	,
	"hash_uid"	,
    "isin" ) FROM '/opt/data/output/landing_file.csv' WITH (FORMAT CSV);
COMMIT;
[2024-06-19T16:33:36.049+0000] {base.py:84} INFO - Using connection ID 'postgres_***' for task execution.
[2024-06-19T16:33:36.058+0000] {base.py:84} INFO - Using connection ID 'postgres_***' for task execution.
[2024-06-19T16:33:36.092+0000] {sql.py:487} INFO - Running statement: BEGIN TRANSACTION;
COPY raw_external_fund(
	"financial_type"
	"symbol"	,
	"security_name"	,
	"sedol"	,
	"price"	,
    "quantity"	,
	"realised_pl"	,
    "market_value"	,
	"fund_name"	,
	"date"	,
	"hash_uid"	,
    "isin" ) FROM '/opt/data/output/landing_file.csv' WITH (FORMAT CSV);
COMMIT;, parameters: None
[2024-06-19T16:33:36.099+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-19T16:33:36.100+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ""symbol""
LINE 4:  "symbol" ,
         ^

[2024-06-19T16:33:36.112+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=testing_dag, task_id=load_data, run_id=manual__2024-06-19T16:32:52.077240+00:00, execution_date=20240619T163252, start_date=20240619T163335, end_date=20240619T163336
[2024-06-19T16:33:36.129+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 76 for task load_data (syntax error at or near ""symbol""
LINE 4:  "symbol" ,
         ^
; 2105)
[2024-06-19T16:33:36.166+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-19T16:33:36.181+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-19T16:33:36.183+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
